[gd_scene load_steps=65 format=2]

[ext_resource path="res://ASSETS_SWING/Character Hero/FX/Effects/Effect1 Gameboy Spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Hero.gd" type="Script" id=2]
[ext_resource path="res://ASSETS_SWING/Character Hero/die/ghost.png" type="Texture" id=3]
[ext_resource path="res://ASSETS_SWING/Character Hero/FX/Effects/Effect 1 - Sprite Sheet.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Health.gd" type="Script" id=5]
[ext_resource path="res://Scenes/CoinCount.gd" type="Script" id=6]
[ext_resource path="res://ASSETS_SWING/Character Hero/hero_full_sheet.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Air Attack"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox2/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.29
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.18, 0.23, 0.27 ),
"transitions": PoolRealArray( 1, 0.164939, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fall"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.707107 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
length = 0.2
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hero_full_sheet:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.006, 0.082, 0.107, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.133333, 1, 1 ), Color( 0.662745, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Jump"
length = 0.3
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.106, 0.209 ),
"transitions": PoolRealArray( 1, 1, 0.870551 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.868421
loop = true
step = 0.0263158
tracks/0/type = "value"
tracks/0/path = NodePath("hero_full_sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0789474, 0.157895, 0.236842, 0.315789, 0.394737, 0.473684, 0.552632, 0.631579, 0.710526, 0.789474 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.784585 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 24 ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Air Attack"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Attack"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Hurt"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=35]
"states/Air Attack/node" = SubResource( 8 )
"states/Air Attack/position" = Vector2( 759, -42.8024 )
states/Attack/node = SubResource( 9 )
states/Attack/position = Vector2( 517.419, 366.506 )
states/Fall/node = SubResource( 10 )
states/Fall/position = Vector2( 557.666, 66.7037 )
states/Hurt/node = SubResource( 11 )
states/Hurt/position = Vector2( 330.79, 4.66057 )
states/Idle/node = SubResource( 12 )
states/Idle/position = Vector2( 275.148, 140.333 )
states/Jump/node = SubResource( 13 )
states/Jump/position = Vector2( 640.334, 264.481 )
states/Run/node = SubResource( 14 )
states/Run/position = Vector2( 241.272, 294.852 )
transitions = [ "Idle", "Jump", SubResource( 15 ), "Jump", "Fall", SubResource( 16 ), "Idle", "Run", SubResource( 17 ), "Run", "Jump", SubResource( 18 ), "Fall", "Idle", SubResource( 19 ), "Idle", "Attack", SubResource( 20 ), "Run", "Attack", SubResource( 21 ), "Fall", "Air Attack", SubResource( 22 ), "Jump", "Air Attack", SubResource( 23 ), "Run", "Idle", SubResource( 24 ), "Attack", "Idle", SubResource( 25 ), "Air Attack", "Fall", SubResource( 26 ), "Idle", "Fall", SubResource( 27 ), "Run", "Fall", SubResource( 28 ), "Attack", "Run", SubResource( 29 ), "Air Attack", "Hurt", SubResource( 30 ), "Hurt", "Idle", SubResource( 31 ), "Jump", "Hurt", SubResource( 32 ), "Fall", "Hurt", SubResource( 33 ), "Idle", "Hurt", SubResource( 34 ) ]
start_node = "Idle"
graph_offset = Vector2( -94.738, -62.201 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[sub_resource type="RectangleShape2D" id=37]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 18, 12 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 14, 20 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 32 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 64, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 64, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 32, 32 )

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "WasHit",
"speed": 12.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "Die",
"speed": 8.0
} ]

[sub_resource type="Animation" id=56]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=57]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Hero" type="KinematicBody2D"]
collision_mask = 264
script = ExtResource( 2 )

[node name="hero_full_sheet" type="Sprite" parent="."]
texture = ExtResource( 12 )
offset = Vector2( 6, 0 )
hframes = 15
vframes = 2
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Air Attack" = SubResource( 1 )
anims/Attack = SubResource( 2 )
anims/Fall = SubResource( 3 )
anims/Hurt = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 36 )

[node name="HurtBox" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 1.7 )
shape = SubResource( 37 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 29, -4 )
shape = SubResource( 38 )
disabled = true

[node name="HitBox2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox2"]
position = Vector2( 25, -11 )
shape = SubResource( 39 )
disabled = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="StunTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvinciblityTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 55 )
animation = "WasHit"
offset = Vector2( 0, -6 )

[node name="FX1" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 6

[node name="Play1" type="AnimationPlayer" parent="FX1"]
playback_speed = 2.0
anims/FX1 = SubResource( 56 )

[node name="FX2" type="Sprite" parent="."]
position = Vector2( 37, -14 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
vframes = 6

[node name="Play2" type="AnimationPlayer" parent="FX2"]
playback_speed = 2.0
anims/FX2 = SubResource( 57 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Health" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CoinCount" type="Node2D" parent="."]
script = ExtResource( 6 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="HitBox2" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="InvinciblityTimer" to="." method="_on_InvinciblityTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
